css/style.css
/* ... */
 
.ui-autocomplete {
	background-color: white;
	width: 400px;
	border: 1px solid #cfcfcf;
	list-style-type: none;
	padding: 5px 0;
}
.ui-autocomplete li {
	cursor: pointer;
	padding: 3px 5px;
}
	.ui-autocomplete li:hover {
		background-color: #e0e0e0;
	}
	
	
.ui-autocomplete a {
	display: block;
}
 
#data {
	display: block;
	margin: 0 auto;
	height: 500px;
	padding-right: 10px;
}

#alerts {
	background-color: white;
	display: block;
	float: left;
	height: 100%;
	width: 350px;
}

#alerts h2 {
	-moz-border-radius: 5px; 
	-webkit-border-radius: 5px; 
	border-radius: 5px;
	-moz-background-clip: padding; -webkit-background-clip: padding-box; background-clip: padding-box; 
	background: #fafafa;
	border: 1px solid #eaeaea;
	font-size: 14px;
	margin: 20px;
	padding: 10px;
}

#alerts ul {
	margin: 20px;
	padding: 0;
}
#alerts li {
	-moz-border-radius: 6px; 
	-webkit-border-radius: 6px; 
	border-radius: 6px;
	-moz-background-clip: padding; -webkit-background-clip: padding-box; background-clip: padding-box; 
	border-bottom: 1px solid #eaeaea;
	color: #808080;
	cursor: pointer;
	list-style-type: none;
	margin: 0 0 10px 0;
	padding: 10px;
}
	#alerts li:hover {
		background-color: #f0f0f0;
		color: #202020;
	}
	#alerts li li:hover {
		background-color: transparent;
		color: #808080;
	}
	#alerts li.focus {
		-webkit-box-shadow: 0 0 30px #d0d0d0;
		-moz-box-shadow: 0 0 20px #d0d0d0;
		-o-box-shadow: 0 0 20px #d0d0d0;
		-msie-box-shadow: 0 0 20px #d0d0d0;
		box-shadow: 0 0 20px #d0d0d0;
		background-color: rgb(0,105,183);
		border: 0;
		color: white;
	}

#alerts ul ul {
	display: none;
	margin: 15px 0 0 5px;
	padding: 0;
}
	#alerts ul ul li {
		border: 0;
		margin: 0;
		padding: 4px;
	}
	#alerts li.focus li {
		color: white;
	}
	#alerts li li em {
		display: inline-block;
		font-weight: bold;
		width: 120px;
	}
	#alerts li li.title {
		font-weight: bold;
		margin-top: 12px;
	}
	#alerts a {
		color: white;
	}
	#alerts li li.comments {
		-moz-border-radius: 4px; 
		-webkit-border-radius: 4px; 
		border-radius: 4px;
		-moz-background-clip: padding; -webkit-background-clip: padding-box; background-clip: padding-box; 
		background-color: white;
		color: rgb(0,105,183);
		margin-top: 15px;
		text-align: center;
	}
		#alerts li li.comments:hover {
			background-color: #f0f0f0;
		}
	

#map {
	display: block;
	height: 100%;
}

#comments {
	display: none;
	-webkit-box-shadow: 0 0 80px rgb(0,105,183);
	-moz-box-shadow: 0 0 80px rgb(0,105,183);
	-o-box-shadow: 0 0 80px rgb(0,105,183);
	-msie-box-shadow: 0 0 80px rgb(0,105,183);
	box-shadow: 0 0 80px rgb(0,105,183);
	outline: 10px solid rgba(100, 100, 100, 0.2);
	background-color: white;
	padding: 10px;
	height: 600px;
	margin-left: -400px;
	margin-top: -320px;
  width: 800px;
  padding: 20px;
  position: absolute;
  top: 50px;
  left: 50%;
  top: 50%;
}

#legend {
	-webkit-box-shadow: 0 0 10px rgba(50,50,50,0.6);
	-moz-box-shadow: 0 0 10px rgba(50,50,50,0.6);
	-o-box-shadow: 0 0 10px rgba(50,50,50,0.6);
	-msie-box-shadow: 0 0 10px rgba(50,50,50,0.6);
	box-shadow: 0 0 10px rgba(50,50,50,0.6);
	width: 100px;
	background-color: rgb(248,248,248);
	border: 1px solid rgb(111,140,206);
	list-style-type: none;
	text-align: left;
	padding: 10px 10px 1px 10px;
	position: absolute;
	right: 16px;
	top: 204px;
	z-index: 999999;
}
	#legend li {
		margin-bottom: 10px;
	}
	#legend span {
		border: 1px solid #a0a0a0;
		display: inline-block;
		width: 20px;
	}


/**
 * Non-semantic helper classes: please define your styles before this section.
 */

/* For image replacement */
.ir { display: block; text-indent: -999em; overflow: hidden; background-repeat: no-repeat; text-align: left; direction: ltr; }

/* Hide for both screenreaders and browsers:
   css-discuss.incutio.com/wiki/Screenreader_Visibility */
.hidden { display: none; visibility: hidden; }

/* Hide only visually, but have it available for screenreaders: by Jon Neal.
  www.webaim.org/techniques/css/invisiblecontent/  &  j.mp/visuallyhidden */
.visuallyhidden { border: 0; clip: rect(0 0 0 0); height: 1px; margin: -1px; overflow: hidden; padding: 0; position: absolute; width: 1px; }
/* Extends the .visuallyhidden class to allow the element to be focusable when navigated to via the keyboard: drupal.org/node/897638 */
.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus { clip: auto; height: auto; margin: 0; overflow: visible; position: static; width: auto; }

/* Hide visually and from screenreaders, but maintain layout */
.invisible { visibility: hidden; }

/* The Magnificent Clearfix: Updated to prevent margin-collapsing on child elements.
   j.mp/bestclearfix */
.clearfix:before, .clearfix:after { content: "\0020"; display: block; height: 0; overflow: hidden; }
.clearfix:after { clear: both; }
/* Fix clearfix: blueprintcss.lighthouseapp.com/projects/15318/tickets/5-extra-margin-padding-bottom-of-page */
.clearfix { zoom: 1; }



/**
 * Media queries for responsive design.
 *
 * These follow after primary styles so they will successfully override.
 */

@media all and (orientation:portrait) {
  /* Style adjustments for portrait mode goes here */

}

@media all and (orientation:landscape) {
  /* Style adjustments for landscape mode goes here */

}

/* Grade-A Mobile Browsers (Opera Mobile, Mobile Safari, Android Chrome)
   consider this: www.cloudfour.com/css-media-query-for-mobile-is-fools-gold/ */
@media screen and (max-device-width: 480px) {


  /* Uncomment if you don't want iOS and WinMobile to mobile-optimize the text for you: j.mp/textsizeadjust */
  /* html { -webkit-text-size-adjust:none; -ms-text-size-adjust:none; } */
}
/* ... */

